--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,15 @@ background-color: #fff;
   /* line-height: 0.5; */
   opacity: .7;
 }
+.attribution{
+      font-size: 11px;
+      text-align: center;
+      position: fixed;
+      padding: 10px 10px 0px 10px;
+      bottom: 3px;
+      width: 100%;
+      left: 0;
+}
 /* @media only screen and (max-width:768px) {
   body{
 
